Ingress k8s/SSL/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name     : admink8s-prod
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: domen
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-nginx
                port:
                  number: 80
  tls:
  - hosts:
    - admink8s.domen.ru
    secretName: tls-secret
